--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,10 @@ version: 2.1
 jobs:
     build:
         docker:
-            - image: circleci/node:13.10.1
+            - image: ryanpedersen42/deno-base:0.0.1
         steps:
             - checkout
+            - run: deno test
 
 workflows:
     build_test_deploy:
