--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,7 @@ jobs:
                 key: dependencies
                 paths:
                     - dependencies.ts
-            - run: 
-                command: |
-                    TESTFILES=$(circleci tests glob "__tests__/**.ts" | circleci tests split --split-by=timings)
-                    deno test $TESTFILES
+            - run: deno test
 
 workflows:
     build_test_deploy:
