playing around with caching

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,16 @@ jobs:
             - image: ryanpedersen42/deno-base-image:latest
         steps:
             - checkout
+            - run: echo "export DENO_DIR=$PWD/deps" >> $BASH_ENV
             - restore_cache:
-                key: v1-{{ checksum "dependencies.ts" }}
+                key: v2-{{ checksum "$DENO_DIR/dependencies.ts" }}
                 paths:
-                    - dependencies.ts
+                    - dependencies/dependencies.ts
             - run: deno cache dependencies.ts
             - save_cache:
-                key: v1-{{ checksum "dependencies.ts" }}
+                key: v2-{{ checksum "$DENO_DIR/dependencies.ts" }}
                 paths:
-                    - dependencies.ts
+                    - dependencies/dependencies.ts
             - run: deno test
 workflows:
     build_test_deploy:
